# rust-crm

./: Cargo.toml  README.md
crm/: Cargo.toml  build.rs
crm/src/: client.rs  server.rs
crm/src/abi/: crm.rs
protos/user_stats/: messages.proto  rpc.proto
user-stat/: Cargo.toml  build.rs  user-stats.yml
user-stat/examples/: gen.rs  link.rs
user-stat/src/: lib.rs  main.rs
user-stat/src/pb/: user_stats.rs
